# cmake_minimum_required(VERSION <specify CMake version here>)
project(Data_Structures_n_Algorithm)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Data_Structures_n_Algorithm LinkList.cpp LLTakeInput1.h Node.h LLTakeInput2.h )
#add_executable(Data_Structures_n_Algorithm Stack.cpp StackUsingArray.h StackUsingTemplate.h StackUsingLL.h TreeNode.h)
#add_executable(Data_Structures_n_Algorithm TreeNode.h Tree.cpp )
add_executable(Data_Structures_n_Algorithm "Code Runner.cpp")
#add_executable(Data_Structures_n_Algorithm Queue.cpp QueueUsingArray.h QueueUsingLL.h Node1.h)
#add_executable(Data_Structures_n_Algorithm Template.cpp pair.h pair1.h pair2.h)